# UD_converion

./: DEP.html  DEPREL.html  POS.html  README.md  dep_rule.yaml  generate_html_table.py  index.html  pyproject.toml
tmpl/: _tmpl.html  _tmpl.html.j2
