[tool.poetry]
name = "ud-converion-table"
version = "0.1.0"
description = "UD Japanese UD変換ルール"
authors = ["Mai Omura <mai-om@ninjal.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
pandas = "^2.0.3"
ruamel-yaml = "^0.17.32"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = [
    "ALL", 
]
ignore = [
    "INP001", "COM812", "FA102", "RUF001", "RUF003"
]
fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]